kubernetes/ingress/cicd-project-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-project-ingress
  namespace: cicd-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cicd-project-frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-project-frontend-service
                port:
                  number: 80
    - host: cicd-project-backend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-project-backend-service
                port:
                  number: 80
